    - VBE: added HDTV resolutions (patch by Tristan Schmelcher)

  - ROM BIOS
    - Report memory above 4GB to BIOS (patch by Sebastian Herbszt)

- GUI and display libraries
  - vga update interval now uses host timing if the realtime sychronization is
    enabled with the "clock" option (FIXME: it should always be used - independant
    from the "clock" setting)

- SF patches applied
  [3323758] Ctrl-Break support for the Win32 gui by Nikolay Nikolov
  [3316785] Ctrl-Break support for the X11 gui by Nikolay Nikolov
  [3298173] Breakpoint on VMEXIT event by Jianan Hao
  [3295737] Fix CopyHost*WordLittleEndian macros by Heikki Lindholm
  [3289448] optimized powerpc byte swapping by Heikki Lindholm
  [3292581] Core Audio first aid by Heikki Lindholm
  [3205979] Compilation fixes for OpenBSD by Brad Smith
  [3290979] acpi/muldiv64 endian bug by Heikki Lindholm
  [3289459] Mac OS X audio missing framework dependency by Heikki Lindholm
  [3267459] fix xrandr related crash by Heikki Lindholm
  [3190995] add eth backend based on Slirp by Heikki Lindholm

- these S.F. bugs were closed/fixed
  [3190970] Installing linux causes a crash in pci_ide
  [3077616] Fedora 13 installation fails on Bochs 2.4.5
  [3294671] ./configure --enable-pci --disable-cdrom
  [3303818] wrong memory size is reported to GRUB (e820 problem?)
  [3297475] trace cache disabled mode will miss SMC
  [3170157] BIOS32 PCI service wrong length
  [3025030] PIT mistakenly connected to IRQ0 IOAPIC instead of IRQ2
  [3266738] GUI debugger does not update CPU mode correctly
  [3292571] SB16 doesn't reinit correctly
  [3175168] Cirrus CL-GD5446 emulation incorrect
  [3260134] Failed to compile when trace cache disabled
  [3197425] Error compile with vmx in vs2008/2010 and for correct x64

-------------------------------------------------------------------------
Changes in 2.4.6 (February 22, 2011):

Brief summary :
- Support more host OS to run on:
  - Include win64 native binary in the release.